--- a/index.html/index.html
+++ b/index.html/index.html
@@ -10,5 +10,8 @@
     <div class="container">
         <div class="cloud"></div>
     </div>
+    <script src="index.js"></script>
+
+
 </body>
 </html>
